--- a/ndrf/index.html
+++ b/ndrf/index.html
@@ -10,6 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
   </head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;800&display=swap');
+  </style>
+  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
